# stat-archivator

./: .gitignore  Makefile  README.md  pyproject.toml
stat_archivator/: __main__.py
stat_archivator/entity/: __init__.py  common.py  exc.py  object.py  report.py  report_archive.py  slice_row.py  walker_archive.py
stat_archivator/template/: report.xml
