[tool.poetry]
name = "stat-archivator"
version = "0.1.0"
description = "Консольная утилита для генерации данных, сбора статистики и архивирования"
authors = ["Владислав Пруд <vdprud@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stat_archivator"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
